# geocell/src/main/kotlin/org/sdato/geocell/dto/response/CellsTouchingCellPolygonResponse.kt
@@ -1,0 +1,6 @@
+package org.sdato.geocell.dto.response
+
+data class CellsTouchingCellPolygonResponse(
+	val centralCell: CellResponse,
+	val touchingCells: List<CellResponse>
+)
