# geocell/src/main/kotlin/org/sdato/geocell/dto/response/CellsTouchingPointResponse.kt
@@ -1,0 +1,7 @@
+package org.sdato.geocell.dto.response
+
+data class CellsTouchingPointResponse(
+	val latitude: Double,
+	val longitude: Double,
+	val cells: List<CellResponse>
+)
